--- a/.gitmodules
+++ b/.gitmodules
@@ -91,3 +91,6 @@
 [submodule "third_party/zarchive"]
 	path = third_party/zarchive
 	url = https://github.com/exzap/ZArchive.git
+[submodule "third_party/libcurl"]
+	path = third_party/libcurl
+	url = https://github.com/curl/curl.git
