--- a/.gitignore
+++ b/.gitignore
@@ -101,3 +101,9 @@ node_modules/.bin/
 /third_party/binutils/binutils*
 /third_party/vasm/
 /tools/shader-playground/*.dll
+
+# ==============================================================================
+# QT binaries directory
+# ==============================================================================
+
+/third_party/qt_binary/
