--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -56,19 +56,12 @@ jobs:
       - name: Setup
         run: .\xb setup
       - name: Build
-        run: .\xb build --config=Release --target=src\xenia-app --target=src\xenia-vfs-dump
+        run: .\xb build --config=Release --target=src\xenia-app
       - name: Prepare artifacts
         run: |
           robocopy . build\bin\${{ runner.os }}\Release                                                                LICENSE /r:0 /w:0
-          robocopy   build\bin\${{ runner.os }}\Release artifacts\xenia_canary_netplay   xenia_canary_netplay.exe   xenia_canary_netplay.pdb   LICENSE /r:0 /w:0
-          robocopy   build\bin\${{ runner.os }}\Release artifacts\xenia-vfs-dump xenia-vfs-dump.exe xenia-vfs-dump.pdb LICENSE /r:0 /w:0
+          robocopy   build\bin\${{ runner.os }}\Release artifacts\xenia_canary_netplay   xenia_canary_netplay.exe      LICENSE /r:0 /w:0
           If ($LastExitCode -le 7) { echo "LastExitCode = $LastExitCode";$LastExitCode = 0 }
-      - name: Upload xenia-vfs-dump artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: xenia-vfs-dump_canary
-          path: artifacts\xenia-vfs-dump
-          if-no-files-found: error
       - name: Upload xenia canary artifacts
         uses: actions/upload-artifact@v4
         with:
